# tsembind

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  src.tsconfig.json  test.tsconfig.json  tsconfig.json
src/: annotation.ts  cmd.js  cmd.ts  declarations.js  declarations.ts  embind.js  embind.ts  emscripten.ts  hint.ts  index.ts  inject.js  inject.ts  nominal.ts  registry.ts  str.js  string.ts  tsembind.h  tsembind.js  tsembind.ts  wasm.ts
src/declaration/: classes.ts  generate.ts  index.ts  registry.ts  resolve.ts
src/declarations/: classes.js  classes.ts
src/injection/: index.ts  inject.ts  registry.ts
test/: class_class_method.cc  class_method.cc  class_method_multi_param.cc  class_property.cc  classes.js  constructor_args.cc  empty_class.cc  emval.cc  enum1.cc  enum2.cc  enums.js  functions.js  generate-d-ts-files.ts  return_float.cc  return_int.cc  runsimplefunc.js  simplefunc.cc  smart_ptr.cc  subclass.cc  sum.cc  test.js  voidfunc.hint.js
test/cc/: class_property.cc  constructor.cc  empty_enum.cc  examplelib.cc  identity.cc  overload.cc  return_bool.cc  return_string.cc  subclass.cc  subclass_smart_ptr.cc  symbol_method.cc  voidfunc.cc
test/ts/: annotate.ts  enum2.ts  examplelib.ts  property.ts  useclass.ts  usevoidfunc.ts
